@@ -1,3 +1,14 @@
+2008-11-17  Thomas Mills Hinkle  <tom@hydrophax>
+
+	* src/lib/plugins/import_export/gxml_plugin/gxml2_exporter.py (rec_to_xml.write_text):
+	Make sure we don't create element names with spaces in them.
+
+2008-11-15  Thomas Mills Hinkle  <tom@hydrophax>
+
+	* src/lib/plugins/import_export/web_import_plugin/webpage_importer.py (WebParser.add_buffer_to_parsed):
+	Add code to cycle through MS chars and eliminate those that
+	remain/were foobarred by beautifupsoup.
+
 2008-11-11  Thomas Mills Hinkle  <thomas_hinkle@users.sf.net>
 
 	* src/lib/importers/importManager.py (ImportManager.finish_web_import):
